@@ -1,3 +1,4 @@
+- Custom `normal.md` template can be specified in user's appdata folder
 - Download NRFA during installation
 - Improvements to Windows installer
 
